untangle marker click/opening webpage